--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -63,6 +63,7 @@
         "map": "cpp",
         "unordered_map": "cpp",
         "xhash": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "variant": "cpp"
     }
 }
