--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -65,5 +65,9 @@
         "xhash": "cpp",
         "xtree": "cpp",
         "variant": "cpp"
-    }
+    },
+    "editor.formatOnSave": false,
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true,
+    "editor.detectIndentation": false
 }
